--- a/mail/templates/mail/content.html
+++ b/mail/templates/mail/content.html
@@ -6,7 +6,7 @@
 {% block content %}
 <section>
     <h4 onclick="backCNS()" class="curs-pointer">< index/CNS</h4>
-    <h2 class="mt-5 pl-5">Contenu du mail </h2>
+    <h2  class="mt-5 pl-5">Contenu du mail </h2>
 
     <article class="mt-5 container">
         <div class="row">
@@ -48,13 +48,27 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script type="text/javascript">
 
-        const fullPath = window.location.href
-        let tabFullPath = fullPath.split('/')
-        let param = tabFullPath[tabFullPath.length-1]
+        const fullPath = window.location.href;
+        let tabFullPath = fullPath.split('/');
+        let param = tabFullPath[tabFullPath.length-1];
+        let anteParam = tabFullPath[tabFullPath.length-2]
+        const title = document.getElementById('id_title');
+
         const backCNS = function (){
-            local = window.location.href;
-            url = local.substr(0, local.length- (9 + param.length)) + '/cns/'+param;
+            console.log(fullPath, '- content')
+            console.log(fullPath.substr(0, fullPath.length-(param.length)))
+            console.log(fullPath.substr(0, fullPath.length-(param.length)-(anteParam.length)-1) + 'cns/')
+            console.log(param, anteParam, anteParam.length - param.length)
+            if (param != 'content'){
+                //fullPath - content - mail_id + cns
+                url = fullPath.substr(0, fullPath.length-(anteParam.length)-(param.length)-1) + 'cns'
+                window.location.href = url;
+            }
+            console.log("")
+            url = fullPath.substr(0, fullPath.length-(param.length)) +'cns'
+            //fullPath - content + cns
             window.location.href = url;
+            console.log(url)
            
         }
         let add_in_mail = function (givenValue){
@@ -92,6 +106,50 @@
             spec += wanted_width+",height="+wanted_height
             window.open("{% url 'mail:overview'%}"+mail_id, "_blank", spec);
         }
+
+        const checkIntegrity = function(input){
+            value = input.value
+            $.ajaxSetup({
+                beforeSend: function (xhr, settings) {
+                    // if not safe, set csrftoken
+                    if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                    }
+                }
+            });
+            $.ajax( 
+            { 
+                type:"POST", 
+                url: "{% url 'mail:content'%}", 
+                dataType: 'json',
+                data: {'title':value, 'checkIntegrity':'1'},
+                success: function (res) {
+                    console.log("success")
+                    problem = res['problem'];
+                    console.log(res, res['problem'])
+                    if (problem == 0){
+                        input.style.color = 'black';
+                        if (input.value.search('pb') != -1){
+                            console.log("--->" + input.value.search('pb'))
+                            newInput = input.value.replace(' (pb : Ce titre existe déjà)', '')
+                            console.log(newInput)
+                            input.value = newInput; 
+                        }
+                    }else if (problem == 1){
+                        input.style.color = 'red';
+                        input.title = "Ce titre existe déjà ";
+                        if (input.value.search('pb') == -1){
+                            input.value += ' (pb : Ce titre existe déjà)'}
+                        
+                    }                    
+                },
+                error: function (res) {
+                    console.log("erreur");
+                    alert(res.status);
+                }
+            });
+        }
+
         const send_data = function(){
             let receivedData = get_data()
             if (param != 'content'){
@@ -133,6 +191,12 @@
                     canSave = false; 
                 }
             }
+            if (title.value.search('pb') != -1){
+                canSave = false
+                alert("Réglez le problème de titre")
+            }else{
+                checkIntegrity(title)
+            }
             //fields are not empty
             if (canSave){
                 form = document.getElementById('form_mail_skull');
@@ -147,7 +211,6 @@
                 form.setAttribute('method', "POST");
                 form.submit()
             }
-
         }
         {% if mail %}
             let get_field = function(){
@@ -161,7 +224,11 @@
             }
             get_field()
         {% endif %}
-            
+
+        title.addEventListener('focusout', function(){
+            checkIntegrity(title);
+        })
+        
         </script>
         }
     </section>
