--- a/sheet/templates/sheet/alter.html
+++ b/sheet/templates/sheet/alter.html
@@ -37,15 +37,30 @@
 							<div class="col-4 text-center">{{form.mail_reminder.label}}<br/> {{form.mail_reminder}}</div>
 							<div class="col-4 text-center">{{form.tel_reminder.label}}<br/> {{form.tel_reminder}}</div>
 						</div>
-						<div class="row">
+						<div id="new-former" class=" row d-none new-former">
+							<div class="col-1"></div>
+							<div class="col-4 new-owner  very-center curs-pointer" onclick="dispNewOwn()">
+								Nouveau propriétaire
+							</div>
+							<div class="col-2"></div>
+
+							<div class="col-4 former-owner  very-center curs-pointer" onclick="SelectOwners()">
+								Ancien propriétaire
+							</div>
+							<div class="col-1"></div>
+
+						</div>
+						<div class="row owner_input d-flex">
 							<div class="col-4 text-center">{{form.owner_name.label}}<br/> {{form.owner_name}}</div>
 							<div class="col-4 text-center">{{form.owner_surname.label}}<br/> {{form.owner_surname}}</div>
 							<div class="col-4 text-center">{{form.owner_sex}}</div>
 						</div>
-						<div class="row">
-							<div class="col-1"></div>
-							<div class="col-4 text-center">{{form.phone.label}}<br/> {{form.phone}}</div>
-							<div class="col-7 mb-2 text-center">{{form.mail.label}}<br/> {{form.mail}}</div>
+						<div class="row owner_input d-flex">
+							<div class="col-3 text-center">{{form.phone.label}}<br/> {{form.phone}}</div>
+							<div class="col-4 mb-2 text-center">{{form.mail.label}}<br/> {{form.mail}}</div>
+							<div class="col-5 mt-4 text-center ">
+								<div class="curs-pointer bg-refresh w-100" onclick="Select()">Sélectionner utilisateur existant</div>
+							</div>		
 						</div>
 					</div>			
 					<div class="col-4 bg-green">
@@ -68,13 +83,124 @@
 			</div>
 		</form>
 	</article>
+	<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 	<script type="text/javascript">
 
 		let true_radio = document.getElementById("id_is_neutered_0");
 		true_radio.checked = true;
 		let species0 = document.getElementById("id_species_0");
-		species0.checked = true;
-		
+		species0.checked = true;	
+		let divOwners = document.getElementsByClassName('owner_input')
+        let divNewFormer = document.getElementById('new-former')	
+		const csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
+
+
+		const Select = function(){
+			for (div of divOwners){
+				div.classList.replace('d-flex', 'd-none')
+			}
+			divNewFormer.classList.replace('d-none', 'd-flex')
+		}
+
+		// creates and displays select with owners name and validate button
+		const SelectOwners = function(){
+			document.getElementById('id_owner_name').value = ""
+			divNF = document.getElementsByClassName("new-former")[0]
+			divFormer = document.getElementsByClassName("former-owner")[0]
+			divNew = document.getElementsByClassName("new-owner")[0]
+			divFormer.classList.add("d-none")
+			divNew.classList.add("d-none")
+			select = document.createElement('select')
+			select.id = "id_select"
+			select.name = "former_owner"
+			divNF.appendChild(select)
+			
+			{% for owner in owners%}
+				option = document.createElement('option')
+				option.value = '{{owner.id}}'
+				option.innerHTML = "{{owner}}"
+				select.appendChild(option)
+			{% endfor %}
+			buttValidate = document.createElement('button')
+			buttValidate.id = 'buttValidate'
+			buttValidate.innerHTML = "valider"
+			divNF.appendChild(buttValidate)
+			document.getElementById('buttValidate').addEventListener('click', function(event){
+				// this functions fills the inputs with the given data from animal
+				
+				value = document.getElementById('id_select').value
+				console.log("jenvoie : " + value)
+				//AJAX
+				const csrfSafeMethod = function(method) {
+	            	// these HTTP methods do not require CSRF protection
+	            	return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+	        	}
+				$.ajaxSetup({
+	                beforeSend: function (xhr, settings) {
+	                    // if not safe, set csrftoken
+	                    if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+	                        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+	                    }
+	                }
+	            }); 
+	            $.ajax({ 
+	                type:"POST", 
+	                url: "{% url 'sheet:add'%}", 
+	                dataType: 'json',
+	                data: {'ask_owner_data':"1", 'owner_id':value},
+	                success: function (res) {
+	                    console.log('voici ta réponse : ')
+	                    console.log(res.data.name)
+	                    console.log(res.data.surname)
+	                    console.log(res.data.sex)
+	                    console.log(res.data.phone)
+	                    console.log(res.data.mail)
+	                    dispNewOwn()
+	                    fillBlank(res.data)
+	                    // fillBlank(res.data)
+	                    
+	                },
+	                error: function (res) {
+	                    alert("erreur lors de l'envoie de données");
+	                    console.log(res.status);
+	                    console.log(res.error);
+	                }
+	            })			
+			});
+		}
+		const dispNewOwn = function(){
+			divNF = document.getElementsByClassName("new-former")[0]
+			divNF.classList.replace("d-flex", "d-none")
+			ownDivs = document.getElementsByClassName('owner_input')
+			for (div of ownDivs){
+				div.classList.replace("d-none", "d-flex")
+			}
+			removeFromOwnerBlank()
+		}
+		// remove data from owner Form
+		const removeFromOwnerBlank = function(value){
+			ids = ["id_owner_name", "id_owner_surname", "id_owner_sex", 'id_phone', "id_mail"]
+			for (index in ids){
+				input = document.getElementById(ids[index])
+				input.value = ""
+			}
+		}
+		const fillBlank = function(value){
+			ids = ["id_owner_name", "id_owner_surname", 'id_phone', "id_mail"]
+			values = [value.name, value.surname, value.phone, value.mail]
+			for (index in ids){
+				input = document.getElementById(ids[index])
+				input.value = values[index]
+			}
+			let inputSex = document.getElementById('id_owner_sex').children;
+			console.log(inputSex, value.sex)
+			if (value.sex == 0){
+				inputSex[0].firstChild.firstChild.checked = true
+			}else{
+				inputSex[1].firstChild.firstChild.checked = true
+			}
+
+		}
 		//complete the blank
 		//1 select inputs
 		function appearNewInput(){
